src/passes/snapshots/ling__passes__resolve_names__tests__argument_shadowed.snap
---
source: src/passes/resolve_names.rs
expression: "test_resolve(\"func foo(a: uint) { let a = 12; }\")"
---
(SymbolTable(
  symbol_lookup: [
    Symbol(
      ident: "int",
      kind: TyStruct(Builtin),
    ),
    Symbol(
      ident: "uint",
      kind: TyStruct(Builtin),
    ),
    Symbol(
      ident: "foo",
      kind: Function(Ast(Func(
        ident: Resolved(SymbolId(2)),
        ty_params: [],
        params: [
          (Resolved(SymbolId(3)), Constructed(
            ident: Resolved(SymbolId(1)),
            params: [],
          )),
        ],
        ret_ty: Tuple([]),
        body: Block(
          stmts: [
            Declaration(
              lhs: Resolved(SymbolId(4)),
              rhs: Const(ConstIdx(0)),
            ),
          ],
          final_expr: Unit,
        ),
      ))),
    ),
    Symbol(
      ident: "a",
      kind: Var,
    ),
    Symbol(
      ident: "a",
      kind: Var,
    ),
  ],
), "")
