src/passes/snapshots/ling__passes__resolve_names__tests__forward_declaration.snap
---
source: src/passes/resolve_names.rs
expression: "test_resolve(\"func a() { a(); b(); } func b() {}\")"
---
(
    Module {
        items: [
            Func(
                Func {
                    ident: Resolved(
                        SymbolId(
                            2,
                        ),
                    ),
                    ty_params: [],
                    params: [],
                    ret_ty: Unit,
                    body: Block {
                        stmts: [
                            Expr(
                                Call {
                                    callee: Var(
                                        Simple(
                                            Resolved(
                                                SymbolId(
                                                    2,
                                                ),
                                            ),
                                        ),
                                    ),
                                    args: [],
                                },
                            ),
                            Expr(
                                Call {
                                    callee: Var(
                                        Simple(
                                            Resolved(
                                                SymbolId(
                                                    3,
                                                ),
                                            ),
                                        ),
                                    ),
                                    args: [],
                                },
                            ),
                        ],
                        final_expr: Unit,
                    },
                },
            ),
            Func(
                Func {
                    ident: Resolved(
                        SymbolId(
                            3,
                        ),
                    ),
                    ty_params: [],
                    params: [],
                    ret_ty: Unit,
                    body: Block {
                        stmts: [],
                        final_expr: Unit,
                    },
                },
            ),
        ],
    },
    SymbolTable {
        symbol_lookup: [
            Symbol {
                ident: u!("int"),
                kind: TyStruct,
            },
            Symbol {
                ident: u!("uint"),
                kind: TyStruct,
            },
            Symbol {
                ident: u!("a"),
                kind: Function,
            },
            Symbol {
                ident: u!("b"),
                kind: Function,
            },
        ],
    },
    [],
)
