src/passes/snapshots/ling__passes__resolve_names__tests__func_generic.snap
---
source: src/passes/resolve_names.rs
expression: "test_resolve(\"func foo[A, B]() {}\")"
---
(SymbolTable(
  symbol_lookup: [
    Symbol(
      ident: "int",
      kind: TyStruct(Builtin),
    ),
    Symbol(
      ident: "uint",
      kind: TyStruct(Builtin),
    ),
    Symbol(
      ident: "foo",
      kind: Function(Ast(Func(
        ident: Resolved(SymbolId(2)),
        ty_params: [
          Resolved(SymbolId(3)),
          Resolved(SymbolId(4)),
        ],
        params: [],
        ret_ty: Tuple([]),
        body: Block(
          stmts: [],
          final_expr: Unit,
        ),
      ))),
    ),
    Symbol(
      ident: "A",
      kind: TyParam,
    ),
    Symbol(
      ident: "B",
      kind: TyParam,
    ),
  ],
), "")
