src/passes/snapshots/ling__passes__resolve_names__tests__global_shadowing_builtin.snap
---
source: src/passes/resolve_names.rs
expression: "test_resolve(\"func uint() { uint() }\")"
---
(
    Module {
        items: [
            Func(
                Func {
                    ident: Resolved(
                        SymbolId(
                            2,
                        ),
                    ),
                    ty_params: [],
                    params: [],
                    ret_ty: Tuple(
                        [],
                    ),
                    body: Block {
                        stmts: [],
                        final_expr: Call {
                            callee: Var(
                                Simple(
                                    Resolved(
                                        SymbolId(
                                            2,
                                        ),
                                    ),
                                ),
                            ),
                            args: [],
                        },
                    },
                },
            ),
        ],
    },
    SymbolTable {
        symbol_lookup: [
            Symbol {
                ident: u!("int"),
                kind: TyStruct,
            },
            Symbol {
                ident: u!("uint"),
                kind: TyStruct,
            },
            Symbol {
                ident: u!("uint"),
                kind: Function,
            },
        ],
    },
    [],
)
