src/passes/snapshots/ling__passes__resolve_names__tests__scopes.snap
---
source: src/passes/resolve_names.rs
expression: "test_resolve(\"func foo() { loop { let a = 12; } a;}\")"
---
Err("error: symbol `a` not found\n\n")
