src/passes/snapshots/ling__passes__resolve_names__tests__shadowed_global.snap
---
source: src/passes/resolve_names.rs
expression: "test_resolve(\"func foo() { foo() } func foo() {}\")"
---
(
    Module {
        items: [
            Func(
                Func {
                    ident: Resolved(
                        SymbolId(
                            2,
                        ),
                    ),
                    ty_params: [],
                    params: [],
                    ret_ty: Unit,
                    body: Block {
                        stmts: [],
                        final_expr: Call {
                            callee: Var(
                                Simple(
                                    Resolved(
                                        SymbolId(
                                            2,
                                        ),
                                    ),
                                ),
                            ),
                            args: [],
                        },
                    },
                },
            ),
            Func(
                Func {
                    ident: Unresolved(
                        u!("foo"),
                    ),
                    ty_params: [],
                    params: [],
                    ret_ty: Unit,
                    body: Block {
                        stmts: [],
                        final_expr: Unit,
                    },
                },
            ),
        ],
    },
    SymbolTable {
        symbol_lookup: [
            Symbol {
                ident: u!("int"),
                kind: TyStruct,
            },
            Symbol {
                ident: u!("uint"),
                kind: TyStruct,
            },
            Symbol {
                ident: u!("foo"),
                kind: Function,
            },
        ],
    },
    [
        GlobalShadowed(
            u!("foo"),
        ),
    ],
)
